--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit>=1.47.0
-firebase-admin>=7.1.0
-pyrebase4>=4.8.0
-streamlit-authenticator>=0.4.2
+streamlit>=1.28.0
+firebase-admin>=6.2.0
+pyrebase4>=4.7.1
 pandas>=2.0.0
 numpy>=1.24.0
-plotly>=6.0.0
-openpyxl>=3.1.0
-python-dateutil>=2.8.0
 reportlab>=4.0.0
+python-dateutil>=2.8.0
+requests>=2.28.0
+urllib3>=1.26.0
